Closed
Bug 850749
Opened 13 years ago
Closed 13 years ago
Hook up Cell::isTenured
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla22
People
(Reporter: terrence, Assigned: terrence)
References
Details
Attachments
(1 file)
|
832 bytes,
patch
|
billm
:
review+
|
Details | Diff | Splinter Review |
Now that we have IsInsideNursery on m-c, we can trivially hook up isTenured to improve our assertions during post-barrier verification and to carry less diff in the nursery implementation patch.
Attachment #724486 -
Flags: review?(wmccloskey)
Attachment #724486 -
Flags: review?(wmccloskey) → review+
| Assignee | ||
Comment 1•13 years ago
|
||
Comment 2•13 years ago
|
||
Backed out in https://hg.mozilla.org/integration/mozilla-inbound/rev/79f5f64f33b1 for complete scorched-earth failure.
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
| Assignee | ||
Comment 4•13 years ago
|
||
I'm a bit bit baffled as to why this is closed, because that patch got backed out. In any case, it's relanded in:
https://hg.mozilla.org/integration/mozilla-inbound/rev/08217bf1ddc7
| Assignee | ||
Updated•13 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 5•13 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 13 years ago → 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•