Bug 850749 - Make Cell::isTenured use the new IsInsideNursery; r=billm