js/src/jsgc.cpp
@@ -286,7 +286,7 @@ ArenaHeader::checkSynchronizedWithFreeList() const
 bool
 js::gc::Cell::isTenured() const
 {
-    return true;
+    return !IsInsideNursery(runtime(), this);
 }
 #endif
 
